--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/white</item>
         <!-- Customize your theme here. -->
+        <item name="colorAccent">@color/purple_500</item>
     </style>
 
     <style name="Theme.Elephant_todo_app.NoActionBar">
